# smaragd

./: .kde-ci.yml  AUTHORS  CMakeLists.txt  INSTALL  NOTES  README
po/ast/: kwin3_smaragd.po
po/bg/: kwin3_smaragd.po
po/bs/: kwin3_smaragd.po
po/ca/: kwin3_smaragd.po
po/ca@valencia/: kwin3_smaragd.po
po/cs/: kwin3_smaragd.po
po/da/: kwin3_smaragd.po
po/de/: kwin3_smaragd.po
po/el/: kwin3_smaragd.po
po/en_GB/: kwin3_smaragd.po
po/eo/: kwin3_smaragd.po
po/es/: kwin3_smaragd.po
po/et/: kwin3_smaragd.po
po/eu/: kwin3_smaragd.po
po/fi/: kwin3_smaragd.po
po/fr/: kwin3_smaragd.po
po/ga/: kwin3_smaragd.po
po/gl/: kwin3_smaragd.po
po/hi/: kwin3_smaragd.po
po/hu/: kwin3_smaragd.po
po/it/: kwin3_smaragd.po
po/ja/: kwin3_smaragd.po
po/ka/: kwin3_smaragd.po
po/ko/: kwin3_smaragd.po
po/lt/: kwin3_smaragd.po
po/mr/: kwin3_smaragd.po
po/nds/: kwin3_smaragd.po
po/nl/: kwin3_smaragd.po
po/nn/: kwin3_smaragd.po
po/pl/: kwin3_smaragd.po
po/pt/: kwin3_smaragd.po
po/pt_BR/: kwin3_smaragd.po
po/ro/: kwin3_smaragd.po
po/ru/: kwin3_smaragd.po
po/sk/: kwin3_smaragd.po
po/sl/: kwin3_smaragd.po
po/sv/: kwin3_smaragd.po
po/tr/: kwin3_smaragd.po
po/ug/: kwin3_smaragd.po
po/uk/: kwin3_smaragd.po
po/zh_CN/: kwin3_smaragd.po
po/zh_TW/: kwin3_smaragd.po
src/: CMakeLists.txt  Messages.sh  emerald.c  kwin_smaragd.cpp  kwin_smaragd.h  main.c  shadowengine.cpp  shadowengine.h  smaragd.desktop  smaragd.json  smaragd.knsrc
src/config/: CMakeLists.txt  configmanager.h  kwin_smaragd_config.cpp  kwin_smaragd_config.h  kwin_smaragd_dialog.ui
src/engines/: legacy.c  legacy_engine.h  line.c  line_engine.h  oxygen.c  oxygen_engine.h  pixmap.c  pixmap_engine.h  truglass.c  truglass_engine.h  vrunner.c  vrunner_engine.h  zootreeves.c  zootreeves_engine.h
src/include/: decoration.h  emerald.h  libengine.h  titlebar.h
